--- a/src/main/resources/templates/enrollments/form.html
+++ b/src/main/resources/templates/enrollments/form.html
@@ -1,56 +1,45 @@
-<!doctype html>
-<html lang="pt_BR" xmlns:th="www.thymeleaf.org">
-<head th:replace="~{/fragments/head :: content(title='Nova Declaração')}"></head>
+<html
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+        layout:decorate="~{layout/layout}"
+        th:with="title='Nova Declaração'">
+    <body>
+        <div layout:fragment="content">
+            <div class="container">
+                <div class="row mb-5">
+                    <h1>Emissão de declaração</h1>
+                </div>
+                <form th:action="@{/enrollments}" method="POST" th:object="${enrollmentStatus}">
+                    <div class="row">
+                        <input type="hidden" th:field="*{id}"/>
+                        <div class="col-md-4">
+                            <label class="col-sm-2 col-form-label">Observação</label>
+                            <input type="text" class="form-control" required th:field="*{observation}" id="observation" name="observation">
+                        </div>
+                        <div class="col-md-4">
+                            <label class="col-sm-2 col-form-label">Estudante</label>
+                            <select class="form-select" required aria-label="Default select example" th:field="*{student}" id="student" name="student">
+                                <option selected value="">Selecione...</option>
+                                <option th:each="student : ${studentsItems}" th:value="${student.id}" th:label="${student.name}"></option>
+                            </select>
+                        </div>
+                        <div class="col-md-4">
+                            <label class="col-sm-2 col-form-label">Período</label>
+                            <select class="form-select" required aria-label="Default select example" th:field="*{semester}" id="semester" name="semester">
+                                <option selected value="">Selecione...</option>
+                                <option th:each="semester : ${semestersItems}" th:value="${semester.id}" th:label="${semester.description + ' - ' + semester.institution.name}"></option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row mt-4">
+                        <div class="d-flex justify-content-end">
+                            <a class="btn btn-secondary" style="margin-right: 20px" th:href="@{/enrollments/list}">Cancel</a>
+                            <button class="btn btn-success" type="submit" value="Save">Salvar</button>
+                        </div>
 
-<body>
-<nav th:replace="~{/fragments/navbar}"></nav>
-<div class="d-flex justify-content-end mb-5">
-    <div th:if="${message}" style="margin-right: 30px; margin-top: 30px">
-        <div class="alert alert-success alert-dismissible fade show d-flex align-items-center" role="alert">
-            <i class="bi bi-check-circle-fill" style="margin-right: 10px"></i>
-            <div th:text="${message}">
-            </div>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-    </div>
-
-    <div th:unless="${message}"></div>
-</div>
-<div class="container">
-    <div class="row mb-5">
-        <h1>Emissão de declaração</h1>
-    </div>
-    <form th:action="@{/enrollments}" method="POST" th:object="${enrollmentStatus}">
-        <div class="row">
-            <input type="hidden" th:field="*{id}"/>
-            <div class="col-md-4">
-                <label class="col-sm-2 col-form-label">Observação</label>
-                <input type="text" class="form-control" required th:field="*{observation}" id="observation" name="observation">
-            </div>
-            <div class="col-md-4">
-                <label class="col-sm-2 col-form-label">Estudante</label>
-                <select class="form-select" required aria-label="Default select example" th:field="*{student}" id="student" name="student">
-                    <option selected value="">Selecione...</option>
-                    <option th:each="student : ${studentsItems}" th:value="${student.id}" th:label="${student.name}"></option>
-                </select>
-            </div>
-            <div class="col-md-4">
-                <label class="col-sm-2 col-form-label">Período</label>
-                <select class="form-select" required aria-label="Default select example" th:field="*{semester}" id="semester" name="semester">
-                    <option selected value="">Selecione...</option>
-                    <option th:each="semester : ${semestersItems}" th:value="${semester.id}" th:label="${semester.description + ' - ' + semester.institution.name}"></option>
-                </select>
+                    </div>
+                </form>
             </div>
         </div>
-        <div class="row mt-4">
-            <div class="d-flex justify-content-end">
-                <a class="btn btn-secondary" style="margin-right: 20px" th:href="@{/enrollments/list}">Cancel</a>
-                <button class="btn btn-success" type="submit" value="Save">Salvar</button>
-            </div>
-
-        </div>
-    </form>
-</div>
-</body>
+    </body>
 
 </html>
