--- a/src/main/resources/templates/enrollments/list.html
+++ b/src/main/resources/templates/enrollments/list.html
@@ -1,62 +1,50 @@
-<!doctype html>
-<html lang="pt_BR" xmlns:th="www.thymeleaf.org">
-<head th:replace="~{/fragments/head :: content(title='Lista de Declarações')}"></head>
+<html
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+        layout:decorate="~{layout/layout}"
+        th:with="title='Lista de Declaração'">
+    <body>
+        <div layout:fragment="content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md">
+                        <h1>Lista de Declarações</h1>
+                    </div>
+                    <div class="col-md ml-auto d-flex justify-content-end align-items-center">
+                        <form th:action="@{/enrollments/form}" method="GET">
+                            <button class="btn btn-dark" type="submit">Nova declaração</button>
+                        </form>
+                    </div>
+                </div>
 
-<body>
-<nav th:replace="~{/fragments/navbar}"></nav>
-<div class="d-flex justify-content-end mb-5">
-    <div th:if="${message}" style="margin-right: 30px; margin-top: 30px">
-        <div class="alert alert-success alert-dismissible fade show d-flex align-items-center" role="alert">
-            <i class="bi bi-check-circle-fill" style="margin-right: 10px"></i>
-            <div th:text="${message}">
+                <div class="row mt-5">
+                    <div>
+                        <table class="table table-hover">
+                            <thead>
+                            <tr>
+                                <th>Observação</th>
+                                <th>Data de emissão</th>
+                                <th>Período</th>
+                                <th>Estudante</th>
+                                <th>Instituição</th>
+                                <th colspan="2"></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="enrollmentStatus : ${enrollmentStatusList}">
+                                <td th:text="${enrollmentStatus.observation}"></td>
+                                <td th:text="${#temporals.format(enrollmentStatus.receivingDate, 'dd/MM/yyyy')}"></td>
+                                <td th:text="${enrollmentStatus.semester.description}"></td>
+                                <td th:text="${enrollmentStatus.student.name}"></td>
+                                <td th:text="${enrollmentStatus.semester.institution.name}"></td>
+                                <td style="width: 1px"><a class="border-0 bg-transparent" th:href="@{/enrollments/{id}/edit(id=${enrollmentStatus.id})}"><i class="bi bi-pencil-fill" style="color:#212529"></i></a></td>
+                                <td><a th:href="@{/enrollments/{id}/delete(id=${enrollmentStatus.id})}"><i class="bi bi-trash-fill" style="color:#dc3545"></i></a></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
-    </div>
-
-    <div th:unless="${message}"></div>
-</div>
-
-<div class="container">
-    <div class="row">
-        <div class="col-md">
-            <h1>Lista de Declarações</h1>
-        </div>
-        <div class="col-md ml-auto d-flex justify-content-end align-items-center">
-            <form th:action="@{/enrollments/form}" method="GET">
-                <button class="btn btn-dark" type="submit">Nova declaração</button>
-            </form>
-        </div>
-    </div>
-
-    <div class="row mt-5">
-        <div>
-            <table class="table table-hover">
-                <thead>
-                <tr>
-                    <th>Observação</th>
-                    <th>Data de emissão</th>
-                    <th>Período</th>
-                    <th>Estudante</th>
-                    <th>Instituição</th>
-                    <th colspan="2"></th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="enrollmentStatus : ${enrollmentStatusList}">
-                    <td th:text="${enrollmentStatus.observation}"></td>
-                    <td th:text="${#temporals.format(enrollmentStatus.receivingDate, 'dd/MM/yyyy')}"></td>
-                    <td th:text="${enrollmentStatus.semester.description}"></td>
-                    <td th:text="${enrollmentStatus.student.name}"></td>
-                    <td th:text="${enrollmentStatus.semester.institution.name}"></td>
-                    <td style="width: 1px"><a class="border-0 bg-transparent" th:href="@{/enrollments/{id}/edit(id=${enrollmentStatus.id})}"><i class="bi bi-pencil-fill" style="color:#212529"></i></a></td>
-                    <td><a th:href="@{/enrollments/{id}/delete(id=${enrollmentStatus.id})}"><i class="bi bi-trash-fill" style="color:#dc3545"></i></a></td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
-</body>
+    </body>
 
 </html>
