--- a/src/main/resources/templates/semesters/list.html
+++ b/src/main/resources/templates/semesters/list.html
@@ -1,60 +1,47 @@
-<!doctype html>
-<html lang="pt_BR" xmlns:th="www.thymeleaf.org">
-<head th:replace="~{/fragments/head :: content(title='Lista de Períodos')}"></head>
+<html
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorate="~{layout/layout}"
+    th:with="title='Lista de Períodos'">
+    <body>
+        <div layout:fragment="content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md">
+                        <h1>Lista de Períodos</h1>
+                    </div>
+                    <div class="col-md ml-auto d-flex justify-content-end align-items-center">
+                        <form th:action="@{/semesters/form}" method="GET">
+                            <button class="btn btn-dark" type="submit">Novo período</button>
+                        </form>
+                    </div>
+                </div>
 
-<body>
-<nav th:replace="~{/fragments/navbar}"></nav>
-<div class="d-flex justify-content-end mb-5">
-    <div th:if="${message}" style="margin-right: 30px; margin-top: 30px">
-        <div class="alert alert-success alert-dismissible fade show d-flex align-items-center" role="alert">
-            <i class="bi bi-check-circle-fill" style="margin-right: 10px"></i>
-            <div th:text="${message}">
+                <div class="row mt-5">
+                    <div>
+                        <table class="table table-hover">
+                            <thead>
+                            <tr>
+                                <th>Descrição</th>
+                                <th>Data inicial</th>
+                                <th>Data final</th>
+                                <th>Instituição</th>
+                                <th colspan="2"></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="semester : ${semesters}">
+                                <td th:text="${semester.description}"></td>
+                                <td th:text="${#temporals.format(semester.startsAt, 'dd/MM/yyyy')}"></td>
+                                <td th:text="${#temporals.format(semester.endsAt, 'dd/MM/yyyy')}"></td>
+                                <td th:text="${semester.institution.name}"></td>
+                                <td style="width: 1px"><a class="border-0 bg-transparent" th:href="@{/semesters/{id}/edit(id=${semester.id})}"><i class="bi bi-pencil-fill" style="color:#212529"></i></a></td>
+                                <td><a th:href="@{/semesters/{id}/delete(id=${semester.id})}"><i class="bi bi-trash-fill" style="color:#dc3545"></i></a></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
-    </div>
-
-    <div th:unless="${message}"></div>
-</div>
-
-<div class="container">
-    <div class="row">
-        <div class="col-md">
-            <h1>Lista de Períodos</h1>
-        </div>
-        <div class="col-md ml-auto d-flex justify-content-end align-items-center">
-            <form th:action="@{/semesters/form}" method="GET">
-                <button class="btn btn-dark" type="submit">Novo período</button>
-            </form>
-        </div>
-    </div>
-
-    <div class="row mt-5">
-        <div>
-            <table class="table table-hover">
-                <thead>
-                <tr>
-                    <th>Descrição</th>
-                    <th>Data inicial</th>
-                    <th>Data final</th>
-                    <th>Instituição</th>
-                    <th colspan="2"></th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="semester : ${semesters}">
-                    <td th:text="${semester.description}"></td>
-                    <td th:text="${#temporals.format(semester.startsAt, 'dd/MM/yyyy')}"></td>
-                    <td th:text="${#temporals.format(semester.endsAt, 'dd/MM/yyyy')}"></td>
-                    <td th:text="${semester.institution.name}"></td>
-                    <td style="width: 1px"><a class="border-0 bg-transparent" th:href="@{/semesters/{id}/edit(id=${semester.id})}"><i class="bi bi-pencil-fill" style="color:#212529"></i></a></td>
-                    <td><a th:href="@{/semesters/{id}/delete(id=${semester.id})}"><i class="bi bi-trash-fill" style="color:#dc3545"></i></a></td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
-</body>
-
+    </body>
 </html>
