--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -3,6 +3,7 @@
         <div class="container-fluid">
             <img th:src="@{/img/logo.jpeg}" class="ms-4 me-2" width="30px"/>
             <a class="navbar-brand border-0 bg-transparent" th:href="@{/home}"><strong>Athena</strong></a>
+            <a class="navbar-brand border-0 bg-transparent" th:href="@{/auth/logout}"><strong>Sair</strong></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
