--- a/src/main/resources/templates/students/list.html
+++ b/src/main/resources/templates/students/list.html
@@ -2,47 +2,49 @@
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorate="~{layout/layout}"
         th:with="title='Lista de Estudantes'">
-    <body>
-        <div layout:fragment="content">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md">
-                        <h1>Lista de Estudantes</h1>
-                    </div>
-                    <div class="col-md ml-auto d-flex justify-content-end align-items-center">
-                        <form th:action="@{/students/form}" method="GET">
-                            <button class="btn btn-dark" type="submit">Novo estudante</button>
-                        </form>
-                    </div>
-                </div>
-
-                <div class="row mt-5">
-                    <div>
-                        <table class="table table-hover">
-                            <thead>
-                            <tr>
-                                <th>Nome</th>
-                                <th>Matrícula</th>
-                                <th>Instituição</th>
-                                <th>Declaração ativa</th>
-                                <th colspan="2"></th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr th:each="student : ${students}">
-                                <td th:text="${student.name}"></td>
-                                <td th:text="${student.registrationCode}"></td>
-                                <td th:text="${student.institution == null? 'Não cadastrado' : student.institution.name}"></td>
-                                <td th:text="${student.currentEnrollmentStatus == null ? 'Não cadastrado' : student.currentEnrollmentStatus.semester.description}"></td>
-                                <td style="width: 1px"><a class="border-0 bg-transparent" th:href="@{/students/{id}/edit(id=${student.id})}"><i class="bi bi-pencil-fill" style="color:#212529"></i></a></td>
-                                <td><a th:href="@{/students/{id}/delete(id=${student.id})}"><i class="bi bi-trash-fill" style="color:#dc3545"></i></a></td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+<body>
+<div layout:fragment="content">
+    <div class="container">
+        <div class="row">
+            <div class="col-md">
+                <h1>Lista de Estudantes</h1>
+            </div>
+            <div class="col-md ml-auto d-flex justify-content-end align-items-center">
+                <form th:action="@{/students/form}" method="GET">
+                    <button class="btn btn-dark" type="submit">Novo estudante</button>
+                </form>
             </div>
         </div>
-    </body>
+
+        <div class="row mt-5">
+            <div>
+                <table class="table table-hover">
+                    <thead>
+                    <tr>
+                        <th>Nome</th>
+                        <th>Matrícula</th>
+                        <th>Instituição</th>
+                        <th>Declaração ativa</th>
+                        <th colspan="2"></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="student : ${students}">
+                        <td th:text="${student.name}"></td>
+                        <td th:text="${student.registrationCode}"></td>
+                        <td th:text="${student.institution == null? 'Não cadastrado' : student.institution.name}"></td>
+                        <td th:text="${student.currentEnrollmentStatus == null ? 'Não cadastrado' : student.currentEnrollmentStatus.semester.description}"></td>
+                        <td style="width: 1px"><a class="border-0 bg-transparent" th:href="@{/students/{id}/edit(id=${student.id})}"><i class="bi bi-pencil-fill" style="color:#212529"></i></a></td>
+                        <td><a th:href="@{/students/{id}/delete(id=${student.id})}"><i class="bi bi-trash-fill" style="color:#dc3545"></i></a></td>
+                    </tr>
+                    </tbody>
+                </table>
+                <!-- Paginator -->
+                <div th:replace="~{fragments/paging :: paginator('students/list', ${navPage})}" />
+            </div>
+        </div>
+    </div>
+</div>
+</body>
 
 </html>
