Enrollments, institutions and semesters paginations

--- a/src/main/resources/templates/enrollments/list.html
+++ b/src/main/resources/templates/enrollments/list.html
@@ -41,6 +41,8 @@
                             </tr>
                             </tbody>
                         </table>
+                        <!-- Paginator -->
+                        <div th:replace="~{fragments/paging :: paginator('enrollments/list', ${navPage})}" />
                     </div>
                 </div>
             </div>
