--- a/src/main/resources/templates/semesters/list.html
+++ b/src/main/resources/templates/semesters/list.html
@@ -39,6 +39,8 @@
                             </tr>
                             </tbody>
                         </table>
+                        <!-- Paginator -->
+                        <div th:replace="~{fragments/paging :: paginator('semesters/list', ${navPage})}" />
                     </div>
                 </div>
             </div>
