--- a/src/main/resources/templates/enrollments/list.html
+++ b/src/main/resources/templates/enrollments/list.html
@@ -26,7 +26,7 @@
                                 <th>Período</th>
                                 <th>Estudante</th>
                                 <th>Instituição</th>
-                                <th colspan="2"></th>
+                                <th colspan="3"></th>
                             </tr>
                             </thead>
                             <tbody>
@@ -38,6 +38,9 @@
                                 <td th:text="${enrollmentStatus.semester.institution.name}"></td>
                                 <td style="width: 1px"><a class="border-0 bg-transparent" th:href="@{/enrollments/{id}/edit(id=${enrollmentStatus.id})}"><i class="bi bi-pencil-fill" style="color:#212529"></i></a></td>
                                 <td><a th:href="@{/enrollments/{id}/delete(id=${enrollmentStatus.id})}"><i class="bi bi-trash-fill" style="color:#dc3545"></i></a></td>
+                                <td th:if="${enrollmentStatus.document != null}">
+                                    <a th:href="@{${enrollmentStatus.document.url}}">Baixar arquivo</a>
+                                </td>
                             </tr>
                             </tbody>
                         </table>
