--- a/src/main/resources/templates/enrollments/form.html
+++ b/src/main/resources/templates/enrollments/form.html
@@ -14,6 +14,7 @@
                         <div class="col-md-4">
                             <label class="col-sm-2 col-form-label">Observação</label>
                             <input type="text" class="form-control" required th:field="*{observation}" id="observation" name="observation">
+                            <p th:if="${#fields.hasErrors('observation')}" th:errorclass="error" th:errors="*{observation}" class="alert alert-danger" />
                         </div>
                         <div class="col-md-4">
                             <label class="col-sm-2 col-form-label">Estudante</label>
