add username in navbar

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -30,6 +30,9 @@
                         </form>
                     </li>
                 </ul>
+                <span class="navbar-text">
+                    Olá, <strong th:text="${#httpServletRequest.remoteUser}"></strong> bem-vindo!
+                </span>
             </div>
         </div>
     </nav>
