--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -6,6 +6,13 @@
     <body>
         <div th:replace="~{/fragments/navbar :: navbar}"/>
         <div class="d-flex justify-content-end mb-5">
+            <div th:if="${warning ne null}" style="margin-right: 30px; margin-top: 30px">
+                <div class="alert alert-warning alert-dismissible fade show d-flex align-items-center" role="alert">
+                    <i class="bi bi-exclamation-triangle-fill" style="margin-right: 10px; color: #ffc107;"></i>
+                    <div th:text="${warning}"></div>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            </div>
             <div th:if="${message ne null}" style="margin-right: 30px; margin-top: 30px">
                 <div class="alert alert-success alert-dismissible fade show d-flex align-items-center" role="alert">
                     <i class="bi bi-check-circle-fill" style="margin-right: 10px"></i>
