--- a/src/main/resources/templates/enrollments/list.html
+++ b/src/main/resources/templates/enrollments/list.html
@@ -45,7 +45,7 @@
                             </tbody>
                         </table>
                         <!-- Paginator -->
-                        <div th:replace="~{fragments/paging :: paginator('enrollments/list', ${navPage})}" />
+                        <div th:replace="~{fragments/paging :: paginator('.' + ${#strings.substring(#httpServletRequest.requestURI, 7)}, ${navPage})}" />
                     </div>
                 </div>
             </div>
