--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -5,3 +5,12 @@ p {
 i{
     font-size: 20px;
 }
+
+.login{
+    border-radius: 25px 0px 0px 25px;
+    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.25);
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
