--- a/src/main/resources/templates/enrollments/form.html
+++ b/src/main/resources/templates/enrollments/form.html
@@ -11,33 +11,33 @@
                 <form th:action="@{/enrollments}" method="POST" th:object="${enrollmentStatus}" enctype="multipart/form-data">
                     <div class="row">
                         <input type="hidden" th:field="*{id}"/>
-                        <div class="col-md-4">
+                        <div class="col-md-6">
                             <label class="col-sm-2 col-form-label">Observação</label>
                             <input type="text" class="form-control" required th:field="*{observation}" id="observation" name="observation">
                             <p th:if="${#fields.hasErrors('observation')}" th:errorclass="error" th:errors="*{observation}" class="alert alert-danger" />
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-6">
                             <label class="col-sm-2 col-form-label">Estudante</label>
                             <select class="form-select" required aria-label="Default select example" th:field="*{student}" id="student" name="student">
                                 <option selected value="">Selecione...</option>
                                 <option th:each="student : ${studentsItems}" th:value="${student.id}" th:label="${student.name}"></option>
                             </select>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-6">
                             <label class="col-sm-2 col-form-label">Período</label>
                             <select class="form-select" required aria-label="Default select example" th:field="*{semester}" id="semester" name="semester">
                                 <option selected value="">Selecione...</option>
                                 <option th:each="semester : ${semestersItems}" th:value="${semester.id}" th:label="${semester.description + ' - ' + semester.institution.name}"></option>
                             </select>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-6">
                             <label class="col-sm-2 col-form-label">Arquivo</label>
                             <input type="file" class="form-control" id="file" name="file" accept="application/pdf">
                         </div>
                     </div>
                     <div class="row mt-4">
                         <div class="d-flex justify-content-end">
-                            <a class="btn btn-secondary" style="margin-right: 20px" th:href="@{/enrollments/list}">Cancel</a>
+                            <a class="btn btn-secondary" style="margin-right: 20px" th:href="@{/enrollments/list}">Cancelar</a>
                             <button class="btn btn-success" type="submit" value="Save">Salvar</button>
                         </div>
 
