--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,9 @@
         <div class="container" style="margin-top: 100px">
             <div class="row">
                 <div class="col-md-6">
-                    <h1>Bem-vindo ao Athena</h1>
+                    <h1 class="navbar-text">
+                        <span th:text="${#httpServletRequest.remoteUser}" style="text-transform: capitalize"></span>, bem-vindo ao Athena!
+                    </h1>
                     <div class="mt-3">
                         <p>Somos um sistema revolucionário de gerenciamento de declarações de estudantes! Este sistema automatizado é a solução perfeita para empresas que desejam economizar tempo e recursos no gerenciamento de declarações de dependentes dos seus colaboradores.</p>
                         <p>Com a nossa plataforma intuitiva, será possível cadastrar declarações para cada aluno, com todas as informações importantes incluídas, como nome completo, período letivo e data de expiração da declaração. O sistema também permite a personalização de modelos de declarações para atender às necessidades específicas de cada instituição.</p>
